# Rot_intensity_augm_LIVO

./: .gitignore  CMakeLists.txt  README.md  package.xml
Examples/: Sim.cpp  ZGSlamRosTest.cpp  calibtest.cpp  undis.cpp
MapResult/: MapCloud_down.pcd  TrajCloud.pcd  convevrt.py  traj.txt
PCD/: 120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  130.pcd  131.pcd  132.pcd  133.pcd  134.pcd  135.pcd  136.pcd  137.pcd  138.pcd  139.pcd  140.pcd  141.pcd  142.pcd  143.pcd  144.pcd  145.pcd  146.pcd  147.pcd  148.pcd  149.pcd  150.pcd  151.pcd  152.pcd  153.pcd  154.pcd  155.pcd  156.pcd  157.pcd  158.pcd  159.pcd  (+616 more)
config/: LoopConfig.yaml  equipment_param copy.txt  equipment_param.txt  equipment_param_sim.txt  lidar_imu_calib.txt  lidar_imu_calib_sim.txt  params.yaml  params_sim.yaml
filter/: fillter.py
image/check/: all22.pcd  boundaries222.pcd  plane.pcd  voxel.pcd
include/: System.h
include/DataIO/: ReadWriter.h  RigelSLAMRawIOTools.h
include/Feature/: CFilter.hpp  CProcessing.hpp  FeatureExtractor.h  PCA.h  PCA.hpp
include/ImageProcess/: depth_completion.hpp  depthprocesser.h  imageprocess.h
include/Initializer/: LI_Initiator.h  LidMotorCalib.h
include/LoopCloser/: BlockManager.h  ConstraintFinder.h  LoopCloser.h
include/LoopCloser/ContourContext/cont2/: contour.h  contour_db.h  contour_mng.h  correlation.h
include/LoopCloser/ContourContext/eval/: evaluator.h
include/LoopCloser/ContourContext/tools/: algos.h  config_handler.h  pointcloud_util.h
include/MLSD/: mlsd.h
include/Mapper/: CloudBlock.h  IkdTree.h  VoxelMapper.h  VoxelVGICP.hpp
include/Matcher/: Matcher.h
include/Misc/: Color.h  Common.h  So3.h  So3Math.h  Utility.hpp  calculate_pose.h  matplotlibcpp.h  use-ikfom.h
include/Misc/IKFoM_toolkit/esekfom/: esekfom.hpp  util.hpp
include/Misc/IKFoM_toolkit/mtk/: startIdx.hpp
include/Misc/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp  vectview.hpp
include/Misc/IKFoM_toolkit/mtk/types/: S2.hpp  SOn.hpp  vect.hpp  wrapped_cv_mat.hpp
include/Optimizer/: GraphOptimizer.h  Optimizer.h  VoxelMapBA.h
include/Registrator/: AbsoluteOrientation.h  BaseRegistration.h  CRegistration.hpp  LsqRegPCL.h  LsqRegPCL_impl.hpp  RegistrationICP.h  RegistrationLoam.h  RegistrationVGICP.h
include/Registrator/fast_gicp/cuda/: brute_force_knn.cuh  compute_derivatives.cuh  compute_mahalanobis.cuh  covariance_estimation.cuh  find_voxel_correspondences.cuh  vector3_hash.cuh
include/Registrator/fast_gicp/gicp/: fast_gicp.hpp  fast_gicp_st.hpp  fast_vgicp.hpp  fast_vgicp_cuda.hpp  fast_vgicp_voxel.hpp  gicp_settings.hpp  lsq_registration.hpp
include/Registrator/fast_gicp/gicp/experimental/: fast_gicp_mp.hpp  fast_gicp_mp_impl.hpp
include/Registrator/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_vgicp_cuda_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/Registrator/super4pcs/: sampling.h  shared4pcs.h
include/Registrator/super4pcs/accelerators/: bbox.h  kdtree.h  normalHealSet.h  normalset.h  normalset.hpp  utils.h
include/Registrator/super4pcs/accelerators/pairExtraction/: bruteForceFunctor.h  intersectionFunctor.h  intersectionNode.h  intersectionPrimitive.h
include/Registrator/super4pcs/algorithms/: 4pcs.h  match4pcsBase.h  match4pcsBase.hpp  matchsuper4pcs.h  pairCreationFunctor.h
include/Registrator/super4pcs/pcl/: super4pcs.h  super4pcs.hpp
include/Registrator/super4pcs/utils/: disablewarnings.h  logger.h
include/SensorProcess/: CloudInfo.h  GNSSData.h  IMUPreintegration.h  IMUProcess.h  ImuData.h  LidarProcess.h  Pose6D.h
include/Viewer/: DrawerPCL.h  Viewer.h
launch/: run.launch  run_calib.launch  run_sim.launch  run_undist.launch
msg/: LidarAngle.msg  motor.msg
result/: RosSensorSeqTest.py  slam_stats.py  slam_time.py
rviz_config/: loam_livox.rviz  loam_livox_calib.rviz  loam_livox_color.rviz  loam_livox_point.rviz  rigelslam_rot.yaml  rigelslam_rot_color.yaml  rviz.rviz
scripts/: batch-process-datasets.sh  readme.md
src/DataIO/: ReadWriter.cpp  RigelSLAMRawIOTools.cpp
src/Feature/: FeatureExtractor.cpp
src/ImageProcess/: imageprocess.cpp
src/Initializer/: LI_Initiator.cpp  LidMotorCalib.cpp
src/LoopCloser/: BlockManager.cpp  ConstraintFinder.cpp  LoopCloser.cpp
src/LoopCloser/ContourContext/cont2/: contour_db.cpp  contour_mng.cpp
src/LoopCloser/ContourContext/eval/: evaluator.cpp
src/MLSD/: mlsd.cpp
src/Mapper/: CloudBlock.cpp  IkdTree.cpp  VoxelMapper.cpp
src/Matcher/: Matcher.cpp
src/Misc/: Common.cpp  So3.cpp  use-ikfom.cpp
src/Optimizer/: GraphOptimizer.cpp  Optimizer.cpp  VoxelMapBA.cpp
src/Registrator/: AbsoluteOrientation.cpp  BaseRegistration.cpp  RegistrationICP.cpp  RegistrationLoam.cpp  RegistrationVGICP.cpp
src/Registrator/super4pcs/algorithms/: 4pcs.cc  match4pcsBase.cc  super4pcs.cc
src/SensorProcess/: IMUPreintegration.cpp  IMUProcess.cpp  LidarProcess.cpp
src/System/: System-process.cpp  System-utils.cpp  System-visualization.cpp  System.cpp
src/Viewer/: DrawerPCL.cpp  Viewer.cpp
src/xfeat/: InterpolateSparse2d.cpp  XFModel.cpp  XFeat.cpp
time/: indoor.txt  outdoor.txt  tunnel.txt
